--- a/SMFY_demo/SMFY_demo.csproj
+++ b/SMFY_demo/SMFY_demo.csproj
@@ -12,6 +12,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="HotChocolate.AspNetCore" Version="13.7.0" />
     <PackageReference Include="HotChocolate.Data" Version="13.7.0" />
     <PackageReference Include="HotChocolate.Data.EntityFramework" Version="13.7.0" />
